--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.34.1",
-    "typeface-poppins": "^1.1.13",
+    "typeface-montserrat": "^1.1.13",
     "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
