--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "10.2.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-parallax": "^3.3.0",
+    "react-ticker": "^1.2.2",
     "sass": "^1.34.1",
     "typeface-montserrat": "^1.1.13",
     "typeface-roboto": "^1.1.13"
