--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-parallax": "^3.3.0",
+    "react-slick": "^0.28.1",
     "react-ticker": "^1.2.2",
     "sass": "^1.34.1",
+    "slick-carousel": "^1.8.1",
     "typeface-montserrat": "^1.1.13",
     "typeface-roboto": "^1.1.13"
   },
