--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "postbuild": "next-sitemap --config custom-next-sitemap.js"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.20",
-    "classnames": "^2.3.1",
-    "graphql": "^15.5.1",
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-parallax": "^3.3.0",
-    "react-slick": "^0.28.1",
-    "react-ticker": "^1.2.2",
-    "sass": "^1.34.1",
+    "@apollo/client": "^3.11.4",
+    "classnames": "^2.5.1",
+    "graphql": "^16.9.0",
+    "next": "14.2.5",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-parallax": "^3.5.1",
+    "react-slick": "^0.30.2",
+    "react-ticker": "^1.3.2",
     "slick-carousel": "^1.8.1",
     "typeface-montserrat": "^1.1.13",
     "typeface-roboto": "^1.1.13"
   },
   "devDependencies": {
-    "@types/react": "17.0.11",
-    "next-sitemap": "^1.6.116",
-    "typescript": "4.3.2"
+    "@types/node": "^22.2.0",
+    "@types/react": "18.3.3",
+    "next-sitemap": "^4.2.3",
+    "sass": "^1.77.8",
+    "typescript": "5.5.4"
   }
 }
